chore: update microcontroller configuration
Signed-off-by: Ivan Li <ivanli2048@gmail.com>

--- a/LumiDockFlex.ioc
+++ b/LumiDockFlex.ioc
@@ -29,11 +29,11 @@ Mcu.Name=STM32G031G(4-6-8)Ux
 Mcu.Package=UFQFPN28
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PB1
-Mcu.Pin11=PA8
-Mcu.Pin12=PA11 [PA9]
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14-BOOT0
+Mcu.Pin10=PA8
+Mcu.Pin11=PA11 [PA9]
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14-BOOT0
+Mcu.Pin14=PA15
 Mcu.Pin15=PB3
 Mcu.Pin16=PB4
 Mcu.Pin17=PB5
@@ -46,10 +46,10 @@ Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
 Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -75,19 +75,20 @@ PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Locked=true
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=SYS_SWCLK
+PA15.GPIOParameters=GPIO_Label,GPIO_Speed,PinState
+PA15.GPIO_Label=SPEED
+PA15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA15.Locked=true
+PA15.PinState=GPIO_PIN_SET
+PA15.Signal=S_TIM2_CH1_ETR
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PA2.GPIO_Label=SPEED
+PA2.GPIO_Label=FAN_CTRL
 PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA2.Signal=S_TIM2_CH3
 PA4.Locked=true
 PA4.Mode=NSS_Signal_Hard_Output
 PA4.Signal=SPI1_NSS
-PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PA5.GPIO_Label=FAN
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PA5.PinState=GPIO_PIN_SET
-PA5.Signal=S_TIM2_CH1_ETR
 PA6.Locked=true
 PA6.Mode=IN6
 PA6.Signal=ADC1_IN6
